# pennywise

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
apps/static_content/: urls.py  views.py
apps/static_pages/: urls.py  views.py
apps/user/: forms.py  urls.py  views.py
authentication/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_appuser_password.py
pennywise/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
static/css/: base.css
static/css/components/: toast.css
static/css/layouts/: protected-page.css
static/css/pages/authentication/: sign-in.css  sign-up.css
static/css/pages/user/: account.css
static/js/htmx/: disable-element.min.js  multi-swap.min.js
static/js/layout/: protected-page.js
static/js/pages/user/: account.js
templates/components/: toast.html
templates/components/error/: error-recipient.html  field-error.html  form-error.html
templates/icons/: burger.html  loading.html
templates/layouts/: page.html  protected-page.html
templates/pages/authentication/: sign-in.html  sign-up.html
templates/pages/user/: account.html
templates/static_pages/: home.html
tests/: conftest.py  constants.py
tests/apps/static_content/: test_static_content_views.py
tests/apps/user/: test_user_forms.py  test_user_views.py
tests/authentication/: test_authentication_forms.py  test_authentication_views.py
tests/pennywise/: test_manage.py  test_pennywise_utils.py
